---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: 2025.8.12
  Changes:
    - Updated to the new dirty-water-light rename for real this time.
---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 2025.8.12
  Changes:
    - Updated to the new dirty-water-light rename (get teased by changelog forever)
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 2025.8.9
  Changes:
    - Fixed dirty-water-light rename again
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2025.8.9
  Changes:
    - Filament made in biofactory
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2025.8.9
  Changes:
    - Fixed dirty-water-light rename
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025.8.9
  Changes:
    - Added new option to use old NVM recipes
    - Added new filament recipes to print things instead
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025.7.23
  Changes:
    - Fixed pyveganism item group sorting.
    - Rebalanced auogs to be less expensive
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025.7.23
  Changes:
    - Fixed bug caused by melon (`dirty-water-light` -> `tailings`).
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025.7.23
  Changes:
    - Cottongut Non-viable Mass recipes added.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 2025.6.11
  Changes: