@@ -78,6 +78,7 @@ cottongut-fur-tuft=Cottongut Fur Tuft
 non-viable-cottongut-mass=Non-viable Cottongut mass
 non-viable-auog-mass=Non-viable Auog Mass
 non-viable-arqad-queen-mass=Non-viable Arqad Queen mass
+non-viable-arqad-mass=Non-viable Arqad mass
 
 syringe=Syringe
 used-syringe=Used Syringe
@@ -119,8 +120,17 @@ non-viable-vrauks-mass=Mass of Vrauk bits, unable to breathe or feel. Some diass
 non-viable-cottongut-mass=Mass of Cottongut bits, unable to breathe or feel. Some disassembly required!
 non-viable-auog-mass=Mass of Auog bits, unable to breathe or feel. Some diassembly required!
 non-viable-arqad-queen-mass=Mass of Arqad Queen bits, unable to breathe or feel. Some diassembly required!
+non-viable-arqad-mass=Mass of Arqad bits, unable to breathe or feel. Some diassembly required!
 
 [fluid-name]
+methyl-chloride=Methyl Chloride
+flora-solution=Flora Solution
+moondrop-solution=Moondrop Solution
+ralesia-solution=Ralesia Solution
+nectar-1=Nectar 1
+nectar-2=Nectar 2
+nectar-3=Nectar 3
+
 solfaen=Rhodophyta Solfaen
 fiicorum=Nanoarchaeum Fiicorum
 zirrella=Heliocobacter Zirrella
